[project]
name = "news-tracker"
version = "0.1.0"
description = "Scheduled news tracker that sends updates to WeChat via ClawBot"
requires-python = ">=3.10"
dependencies = [
    "wechat-clawbot>=0.2.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "anthropic>=0.86",
    "playwright",
]

[project.scripts]
news-tracker = "tracker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
